# KroqviaRetouchry

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  models.rs
src-tauri/src/pipeline/: mod.rs  tests.rs
src-tauri/tests/: commands.rs
src/__tests__/: App.test.tsx  editorStore.test.ts  tauri.test.ts
src/components/: AdjustPanel.tsx  CropOverlay.tsx  CropPanel.tsx  ToolTabs.tsx  Toolbar.tsx  TransformPanel.tsx
src/store/: editorStore.ts
src/test/: setup.ts
src/types/: editor.ts  tauri.ts
src/utils/: image.ts  tauri.ts
