[package]
name = "kroqvia_retouchry"
version = "0.1.0"
description = "KroqviaRetouchry Linux image editor"
authors = ["KroqviaRetouchry Contributors"]
license = "GPL-3.0-only"
repository = ""
edition = "2021"
rust-version = "1.77"

[lib]
name = "kroqvia_retouchry_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
fast_image_resize = "4.2.1"
image = { version = "0.25.2", default-features = false, features = ["png", "jpeg", "webp"] }
palette = { version = "0.7.6", default-features = false, features = ["std"] }
rayon = "1.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0.0", features = [] }
tauri-plugin-dialog = "2.0.0"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.13.0"
